--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,31 +18,39 @@ a:hover {
     transition: .5s;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     margin: 0px;
     background: url(../images/white-waves.png);
 }
 
 /* Nav Bar CSS */
-header {
+/* header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     background: white;
     border-bottom: 1px solid #cccccc;
-}
+} */
 
 .width-restraint {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 960px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background: white;
+  border-bottom: 1px solid #cccccc;
 }
 
-header h1 {
+.brand {
     /* font-size: 32px; */
-    padding: 25px;
+    padding: 0 25px;
     color: white;
     background: #4aaaa5;
     margin: 0 0 0 25px;
@@ -59,10 +67,13 @@ nav ul li {
 
 /* Content CSS */
 section {
+    display: flex;
+    flex: 1 0 auto;
     margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 12.5%;
-    width: 960px;
+    /* width: 960px; */
+    width: 95%;
     background: white;
     /* height: 520px; */
     border-radius: 5px;
@@ -71,6 +82,7 @@ section {
 
 .section-width {
     padding: 2% 5%;
+    width: 95%;
 }
 
 section h1 {
@@ -79,7 +91,7 @@ section h1 {
     border-bottom: 3px solid #DEDEDE;
 }
 
-section img {
+.body-content img {
     height: 150px;
     float: left;
     margin-right: 3%;
@@ -98,6 +110,7 @@ footer {
     background-color: #666666;
     width: 100%;
     margin-top: 7%;
+    flex-shrink: 0;
 }
 
 footer p {
