--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -2,56 +2,38 @@ section {
     /* display: flex; */
 }
 
-.row {
+.portfolio-content {
     display: flex;
-    flex-direction: row;
-    padding: 40px 0;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: center;
-}
-
-.portfolio-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.portfolio-block img {
-    width: 200px;
-    margin: 0;
-}
-
-.text {
-    margin-top: 40px;
-    text-align: center;
-    background-color: #4aaaa5;
-    position: absolute;
     width: 100%;
+    padding-bottom: 20px;
 }
 
-.text p {
-    margin: 0;
-    padding: 10px 0px;
-    color: white;
+.portfolio-images-col {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 50%;
+  padding: 0 2%;
 }
 
-.port-block-position {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 200px;
+.portfolio-images-col > .image-block {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  max-height: 200px;
+  justify-content: center;
+  align-items: center;
 }
 
-/* .portfolio-block h2 {
-    position: absolute;
-    z-index: 1;
+.image-block img {
+  width: 100%;
+  position: relative;
 }
 
-.portfolio-block img {
-    position: relative;
-} */
+
+.image-header {
+  position: absolute;
+  margin: 0;
+  background-color: #4aaaa5;
+}
